Revision history for Perl extension Test::WWW::Selenium.

1.16 - not yet released
 - use POST instead of GET to selenium server (gyrm)
 - add support for per-session javascript (gyrm)

1.15 - Sun 23 Mar 2008 14:02:25 PDT
 - allow set_timeout() to be called before open()

1.14 - Tue Dec 11 12:45:34 PST 2007
 - fixed typo in Test::WWW::Selenium SYNOPSIS - thanks, Paul Puse
 - added missing dependency on URI::Escape - thanks, Peter (Stig) Edwards

1.13 - Wed Jun  6 19:52:18 PDT 2007
 - fix bug to allow directly calling do_command - Thanks, Tom Hukins
 - Changes from Kevin Jones at Socialtext:
   - refactored out how functions are created
   - add functions to more closely match Selenium IDE:
     - wait_for_text_present
     - wait_for_element_present, and
     - pause

1.12 - Tue Mar 13 20:26:10 PDT 2007
 - move unit test utility to WWW::Selenium::Util
 - refactor unit tests to use Test::Mock::LWP
 - fix bug in get_boolean_array - thanks to Ilya Averyanov

1.11 - Thu Jan  4 19:53:18 PST 2007
 - don't stop a stopped session
 - don't open multiple browsers when start() is called several times
 - Update with Selenium-RC 0.91

1.10 - Tue Nov 14 20:51:13 PST 2006
 - Integrated latest functions available in Selenium-Core 0.90
   - WWW/Selenium.pm is build directly from Core's iedoc.xml
   - Module is built as part of Selenium-RC nightly build process
 - Retained backwards compatibility for deprecated core functions
 - Cleaned up POD
 - Check that caller has opened a page before running commands
 - Open without args opens '/'
 - Added auto_stop option (default on) to auto-close browser windows
 - Remove old get_location function in favour of core builtin
   get_location.  It returns the absolute location.

1.04 - Fri Oct  6 19:02:30 PDT 2006
 - Happy Canadian Thanksgiving!  I thank everyone who uses this.
 - Documentation fixes from Frederic Buclin++
 - Fixed WWW::Selenium example code
 - Patch received from Paul Johnson++ improves:
   - Error message for undefined methods